src/pydjinni/generator/objc/it/swift/error/expected/include/objc/TSTHelper.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "TSTAsyncThrowingCallback.h"
#import "TSTBarError.h"
#import "TSTFooError.h"
#import "TSTThrowingCallback.h"
NS_SWIFT_NAME(Helper)
@interface TSTHelper : NSObject
+ (void)throwingError:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingError());
+ (void)throwingWithParameters:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingWithParameters());
+ (void)throwingAsync:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsync(completion:));
+ (void)throwingAsyncWithReturnValue:(nonnull void (^)(BOOL , NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsyncWithReturnValue(completion:));
+ (void)throwingCallbackError:(nonnull id<TSTThrowingCallback>)callback error:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingCallbackError(callback:));
+ (void)throwingAsyncCallbackError:(nonnull id<TSTAsyncThrowingCallback>)callback completion:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsyncCallbackError(callback:completion:));
- (void)nonstaticThrowingError:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(nonstaticThrowingError());
@end
